[package]
name = "codename"
version = "0.1.1"
authors = ["Jonas A. Hultén <jonas@sldr.se>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A random name/phrase generator"
repository = "https://github.com/DrSLDR/codename"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "^0.7.3"
